--- a/01-reverse-string.html
+++ b/01-reverse-string.html
@@ -6,5 +6,24 @@
 </head>
 <body>
 	
+
+	<script>
+		// Method 1
+		// function reverseStr(str) {
+		// 	return str.split('').reverse().join('');
+		// }
+
+		// Method 2
+		function reverseStr(str) {
+			var revstr = '';
+			for(var i=str.length - 1; i>=0; i--){
+				revstr += str[i];
+			}
+			return revstr;
+		}
+
+		var result = reverseStr('hello world');
+		console.log(result);
+	</script>
 </body>
 </html>
